fix: flex-wrap de spinner-wrapper

--- a/src/components/Spinner/Spinner.stories.scss
+++ b/src/components/Spinner/Spinner.stories.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 3rem;
 
     &:has(.spinner-block) {
